# FaceDemo

./: README.md
FaceDemo/: CMakeLists.txt
FaceDemo/Samples/Sample/: Classify.cpp  HandleFile.cpp  JLXCnnService.cpp  JLXDir.cpp  JLXFace.cpp  JLXFacePredict.cpp  JLXsqlite3.cpp  Sample.cpp  desfile.cpp  jsonconfig.cpp  userCount.cpp  userinput.txt
FaceDemo/Samples/Sample/include/: Classify.hpp  GTILib.h  GtiClassify.h  GtiConfig.h  HandleFile.hpp  JLXDefine.hpp  JLXsqlite3.hpp  Samples.hpp  ThreadQueue.hpp  Threadpool.hpp  desfile.hpp  jsonconfig.hpp
FaceDemo/Samples/facedetect/: CMakeLists.txt
FaceDemo/Samples/facedetect/src/main/cpp/: main.cpp  mtcnn.cpp  mtcnn.h
FaceDemo/Samples/facedetect/src/main/cpp/include/gti/: GTILib.h
FaceDemo/Samples/facedetect/src/main/cpp/save/: 0.png   1.png   15.png   2.png   3.png   4.png   5.png   6.png   72.png   73.png 
FaceDemo/Samples/facedetect/src/main/python/: gui.py  jlxsamples.py  jlxsubprocess.py  mtcnn.py
